--- a/frontend/src/pages/Connection.css
+++ b/frontend/src/pages/Connection.css
@@ -1,15 +1,54 @@
-.header {
+ .connection_header {
   background-color: #002743;
   height: 10vh;
-  width: 100%;
+  
 }
 
-.title {
+.connection_title {
   display: flex;
   font-family: Arial, Helvetica, sans-serif;
+  color: #002743;
+  font-weight: 700;
+  font-size: 2rem;
   align-items: center;
   justify-content: center;
+  padding-bottom: 20%;
+
 }
+
+  .connection_container{
+ margin: 10px;
+ font-family: Arial, Helvetica, sans-serif;
+ color: #002743;
+ font-size: 1.3rem;
+ border: 2px solid #002743; 
+ border-radius: 10px;
+ padding: 10%;
+ min-width: 30vw;
+
+
+} 
+
+.connection_container input{
+
+   margin: 5%;
+   color: #002743;
+  
+   } 
+.connection_button{
+    background-color: #002743;
+    margin-top: 10%;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+/*.connection_container input {
+    display: flex;
+    flex-direction: column;
+    border: none;
+    border-bottom: 1px solid #002743;
+    outline: none;
+    cursor: pointer;
+}   */
 
 /* .header {
      background-color: green;
