--- a/frontend/src/pages/Connection.css
+++ b/frontend/src/pages/Connection.css
@@ -34,64 +34,16 @@
   margin-top: 10%;
   font-family: Arial, Helvetica, sans-serif;
 }
-/*.connection_container input {
-    display: flex;
-    flex-direction: column;
-    border: none;
-    border-bottom: 1px solid #002743;
-    outline: none;
-    cursor: pointer;
-}   */
 
-/* .header {
-     background-color: green;
-     height: 10px;
-     width: 100%;
-
- }
-
- .formulary {
-     max-width: 60%;
-     margin: auto;
-     outline: 1px solid #002743;
-     margin-top: 10%;
-     padding: 3%;
-     border-radius: 10px;
- }
-
-
-
- .title {
-     color: #002743;
-     text-align: center;
-     font-size: 30px;
-     margin: 0 auto;
-     align-items: center;
-     justify-content: center;
-     margin-top: 10%;
-     font-weight: 700;
- }
-
- .connection {
-     display: flex;
-     flex-direction: column;
-     border: 1px solid #002743;
-     border-radius: 5px;
-     width: 30%;
-     min-width: 30%;
-     margin: auto;
-     height: 300px;
-     color: grey;
-     font-size: 1.1rem;
-     align-items: center;
-     justify-content: center;
-
-
- }
-
- .connection input {
-     border: none;
-     border-bottom: 1px solid #002743;
-     outline: none;
-     cursor: pointer;
- } */
+.error_message {
+  color: red;
+  font-size: 1rem;
+}
+.succes_message {
+  display: flex;
+  justify-content: center;
+  color: green;
+  font-size: 1.5rem;
+  align-items: center;
+  margin-top: 10%;
+}
