--- a/frontend/src/pages/AdminUserManagement.css
+++ b/frontend/src/pages/AdminUserManagement.css
@@ -53,3 +53,9 @@
   background-color: var(--main-color);
   border-color: var(--main-color);
 }
+
+@media screen and (min-width: 768px) {
+  .manageUser {
+    width: 50dvw;
+  }
+}
