--- a/frontend/src/pages/Calculator.css
+++ b/frontend/src/pages/Calculator.css
@@ -6,12 +6,13 @@
   max-width: 60vw;
 }
 
-.button-calculate
-{background-color:var(--main-color);
-  border-color: var(--main-color);}
+.button-calculate {
+  background-color: var(--main-color);
+  border-color: var(--main-color);
+}
 
 p {
-  font-family:"Fira Sans";
+  font-family: "Fira Sans";
   font-weight: bold;
 }
 
